# glfw_glad_test

./: .gitignore  CMakeLists.txt  README.md
cmake/: c-vector.cmake  glad.cmake  glfw.cmake  mathc.cmake  post_build.cmake  pre_build.cmake  tinyobjloader-c.cmake
cmake/macros/: get_build_postfix.cmake  get_down.cmake  get_xxd.cmake  print_all.cmake
include/: file.h
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
src/: main.c
src/file/: file.c
src/shader/: fragment.glsl
src/shaders/: fragment.glsl  vertex.glsl
